# auto-researchtrading

./: .dockerignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  backtest_cfi.py  docker-compose.yml  prepare.py  program.md  pyproject.toml  strategy.py  train.py  upbit_backtest.py  upbit_balanced_research.py  upbit_mtf_research.py  upbit_mtf_strategy.py  upbit_prepare.py  upbit_prepare_run.py  upbit_strategy.py
.stitch/: SITE.md  metadata.json  next-prompt.md
.stitch/designs/: index.html  live.html  params.html  strategy.html
.stitch/prompts/: live.md  params.md  strategy.md
.stitch/scripts/: generate_screen.sh
backend/: main.py  models.py
backend/routes/: dashboard.py  live.py  params.py  strategies.py
backend/services/: backtest_cache.py  signals.py
docs/: README.md
docs/context/: autoresearch-loop.md  current-baselines.md  repo-overview.md
equities/: .gitignore  GENERATE_PROMPT.md  README.md  STRATEGIES.md  backtest.py  generate.py  prepare.py  program.md  pyproject.toml  run_benchmarks.py  strategy.py
equities/benchmarks/: buy_and_hold.py  mean_reversion.py  simple_momentum.py  trend_following.py
equities/mirofish/: __init__.py  bridge.py  client.py  docker-compose.mirofish.yml  scenarios.py  setup.sh
research/tradingagents/: .env.example  fetch_top300.py  pipeline.py
scripts/: upbit_balanced_search.py  upbit_mtf_search.py  upbit_mtf_walkforward.py
tests/: test_tradingagents.py  test_upbit_balanced_research.py  test_upbit_mtf_research.py  test_upbit_mtf_strategy.py  test_upbit_prepare.py  test_upbit_strategy.py
(+19 files in other folders)
